# Discrete

./: Cargo.toml  discrete-7ece6e5ed2af2393.js  index.html  sw.js
.github/workflows/: pages.yml
src/: config.rs  conformal_puzzle.rs  geom.rs  gfx.rs  group.rs  main.rs  puzzle.rs  shader.wgsl  tiling.rs  todd_coxeter.rs
