[package]
name = "discrete"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
cga2d = { version = "0.2.2", features = ["bytemuck"] }
eframe = { version = "0.28.1", default-features = false, features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "wgpu", "x11"] }
