[package]
name = "discrete"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.18.0"
cga2d = { version = "0.4.0", features = ["bytemuck"] }
eframe = { version = "0.28.1", default-features = false, features = ["accesskit", "default_fonts", "wayland", "web_screen_reader", "wgpu", "x11"] }
log = "0.4"
regex = "1.10.6"
wgpu = { version = "*", features = ["webgpu", "webgl"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

# to access the DOM (to hide the loading text)
[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
# HACK: pin web-sys to <0.3.70 until a new `eframe` is released containing
# the following PR: https://github.com/emilk/egui/pull/4980
version = ">= 0.3.4, < 0.3.70"

[profile.release]
opt-level = 2 # fast and small wasm
